<?xml version="1.0"?>
<package format="2">
  <name>cpp_template_pkg</name>
  <version>0.0.0</version>
  <description>A template package for ROS1 using C++</description>

  <maintainer email="gingakennis123@icoud.com">Ginga Kennis</maintainer>

  <license>TODO</license>
  <!-- <url type="website"></url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>
  <depend>teleop_twist_keyboard</depend>
</package>